--- a/EnglishFiles/.gitignore
+++ b/EnglishFiles/.gitignore
@@ -1,2 +1,12 @@
 *_Repeat.txt
 *_Repeat_p.txt
+filter.txt
+IELTS1000/*
+ORCHARD3/*
+ORCHARD4/*
+ORCHARD5/*
+ORCHARD6/*
+ORCHARD7/*
+PHRASE/*
+Medium01/*
+SentenceStructure01/*
