--- a/EnglishFiles/.gitignore
+++ b/EnglishFiles/.gitignore
@@ -1,6 +1,9 @@
+__pycache__/*
 *_Repeat.txt
 *_Repeat_p.txt
-filter.txt
+filter_us.txt
+filter_uk.txt
+*.srt
 IELTS1000/*
 ORCHARD3/*
 ORCHARD4/*
@@ -9,4 +12,5 @@ ORCHARD6/*
 ORCHARD7/*
 PHRASE/*
 Medium01/*
+Medium02/*
 SentenceStructure01/*
